Entrega desafio lista

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </form>
     </div>
 
-    <div id="search-container" class="search-container">
+    <div id="search-container" class="search-container" hidden>
         <form id="search-form" class="search-form">
             <input type="text" id="search-product" placeholder="producto a buscar...">
             <button type="submit" class="btn search__btn">Buscar</button>
